--- a/vaccination-tracker/vaccination-tracker-frontend-reactjs/vaccination-tracker-frontend-reactjs/package.json
+++ b/vaccination-tracker/vaccination-tracker-frontend-reactjs/vaccination-tracker-frontend-reactjs/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
