--- a/vaccination-tracker/vaccination-tracker-spring-boot/vaccine-tracker/src/main/resources/application.properties
+++ b/vaccination-tracker/vaccination-tracker-spring-boot/vaccine-tracker/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/svdb
 spring.datasource.username=root
 spring.datasource.password=Root@4995
+server.port=8081
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
