--- a/vaccination-tracker/vaccination-tracker-spring-boot/vaccine-tracker/pom.xml
+++ b/vaccination-tracker/vaccination-tracker-spring-boot/vaccine-tracker/pom.xml
@@ -69,6 +69,17 @@
 			<version>5.2.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 
 
 	</dependencies>
